<resources>
    <string name="app_name">EventsManagementApp</string>
    <string name="add_event">Add Event</string>
    <string name="dashboard">Dashboard</string>
    <string name="new_event_category">New Event Category</string>
    <string name="new_event_form">New Event Form</string>
    <string name="event_id">Event ID</string>
    <string name="auto_generated_on_save">Auto-generated on save</string>
    <string name="event_name">Event name</string>
    <string name="category_id">Category ID</string>
    <string name="tickets_available">Tickets available</string>
    <string name="is_active">Is active?</string>
    <string name="save_event">Save Event</string>
    <string name="new_category_form">New Category Form</string>
    <string name="event_count">Event Count</string>
    <string name="save_category">Save Category</string>
    <string name="category_name">Category Name</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_category_id">Enter Category ID</string>
    <string name="enter_tickets_available">Enter Tickets Available</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="refresh">Refresh</string>
    <string name="clear_event_form">Clear Event Form</string>
    <string name="delete_all_categories">Delete All Categories</string>
    <string name="delete_all_events">Delete All Events</string>
    <string name="view_all_categories">View All Categories</string>
    <string name="add_category">Add Category</string>
    <string name="view_all_events">View All Events</string>
    <string name="logout">Logout</string>
    <string name="add">ADD</string>
    <string name="undo_string">UNDO</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_category_list">Event Category List</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="tickets">Tickets</string>
    <string name="active">Active</string>
    <string name="title_activity_google_map">GoogleMap</string>
</resources>