<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".Login">

    <TextView
        android:id="@+id/viewLogin"
        android:layout_width="87dp"
        android:layout_height="45dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/viewLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="44dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogin" />

    <EditText
        android:id="@+id/editLoginUsername"
        android:layout_width="259dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/viewLoginUsername"
        app:layout_constraintTop_toBottomOf="@+id/viewLoginUsername" />

    <TextView
        android:id="@+id/viewLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/editLoginUsername"
        app:layout_constraintTop_toBottomOf="@+id/editLoginUsername" />

    <EditText
        android:id="@+id/editLoginPassword"
        android:layout_width="258dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/viewLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/viewLoginPassword" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="116dp"
        android:layout_height="57dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="#C8C8C8"
        android:enabled="true"
        android:onClick="onRegister1Click"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLoginPassword" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:onClick="onLogin1Click"
        android:text="@string/login"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnLoginRegister"
        app:layout_constraintStart_toEndOf="@+id/btnLoginRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>