<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".NewEventCategory">

    <TextView
        android:id="@+id/viewNewCategoryForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_category_form"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/viewCategoryID"
        android:layout_width="106dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/category_id"
        app:layout_constraintStart_toStartOf="@+id/viewNewCategoryForm"
        app:layout_constraintTop_toBottomOf="@+id/viewNewCategoryForm" />

    <TextView
        android:id="@+id/viewCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/category_name"
        app:layout_constraintStart_toStartOf="@+id/editCategoryID"
        app:layout_constraintTop_toBottomOf="@+id/editCategoryID" />

    <EditText
        android:id="@+id/editCategoryID"
        android:layout_width="272dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/auto_generated_on_save"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/viewCategoryID"
        app:layout_constraintTop_toBottomOf="@+id/viewCategoryID" />

    <EditText
        android:id="@+id/editCategoryName"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_category_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/viewCategoryName"
        app:layout_constraintTop_toBottomOf="@+id/viewCategoryName" />

    <TextView
        android:id="@+id/viewEventCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/event_count"
        app:layout_constraintStart_toStartOf="@+id/editCategoryName"
        app:layout_constraintTop_toBottomOf="@+id/editCategoryName" />

    <EditText
        android:id="@+id/editEventCount"
        android:layout_width="272dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="Enter Event Count"
        android:inputType="number|numberSigned"
        app:layout_constraintStart_toStartOf="@+id/viewEventCount"
        app:layout_constraintTop_toBottomOf="@+id/viewEventCount" />

    <Switch
        android:id="@+id/switchIsActiveCategory"
        android:layout_width="164dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:text="@string/is_active"
        app:layout_constraintStart_toStartOf="@+id/editEventCount"
        app:layout_constraintTop_toBottomOf="@+id/editEventCount" />

    <Button
        android:id="@+id/btnSaveCategory"
        android:layout_width="260dp"
        android:layout_height="53dp"
        android:layout_marginTop="200dp"
        android:onClick="onSaveCategoryClick"
        android:text="@string/save_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchIsActiveCategory" />

    <EditText
        android:id="@+id/editCategoryLocation"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Enter category location"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textViewLocation"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Location"
        app:layout_constraintStart_toStartOf="@+id/switchIsActiveCategory"
        app:layout_constraintTop_toBottomOf="@+id/switchIsActiveCategory" />

</androidx.constraintlayout.widget.ConstraintLayout>