<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/viewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/viewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Confirm Password"
        app:layout_constraintStart_toStartOf="@+id/editRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterPassword" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="331dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/viewConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/viewConfirmPassword" />

    <TextView
        android:id="@+id/viewRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/editRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterUsername" />

    <EditText
        android:id="@+id/editRegisterPassword"
        android:layout_width="327dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/viewRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/viewRegisterPassword" />

    <EditText
        android:id="@+id/editRegisterUsername"
        android:layout_width="317dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/viewRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/viewRegisterUsername" />

    <TextView
        android:id="@+id/viewRegisterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/viewRegister" />

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#C8C8C8"
        android:onClick="onLogInClick"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10" />

    <Button
        android:id="@+id/RegisterRegisterButton"
        android:layout_width="126dp"
        android:layout_height="59dp"
        android:layout_marginEnd="32dp"
        android:onClick="onRegisterClick"
        android:text="@string/register"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegisterLogin"
        app:layout_constraintEnd_toStartOf="@+id/btnRegisterLogin" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>