<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="4dp"
    app:cardBackgroundColor="@android:color/holo_green_dark"
    app:cardCornerRadius="8dp"
    app:contentPadding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">


        <TextView
            android:id="@+id/eventIdCardTextViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/eventIdCardViewEvent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/eventIdCardViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/eventNameCardTextViewEvent"
            app:layout_constraintLeft_toRightOf="@+id/eventIdCardTextViewEvent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventNameCardTextViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/eventIdCardViewEvent"
            app:layout_constraintRight_toLeftOf="@id/eventNameCardViewEvent" />
        <TextView
            android:id="@+id/eventNameCardViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/eventNameCardTextViewEvent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <TextView
        android:id="@+id/categoryIdCardTextViewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_id"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/categoryIdCardViewEvent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/categoryIdCardViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/categoryIdCardTextViewEvent"
            app:layout_constraintRight_toLeftOf="@+id/availableTicketCardTextViewEvent"
            app:layout_constraintTop_toTopOf="parent"
 />

        <TextView
            android:id="@+id/availableTicketCardTextViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/categoryIdCardViewEvent"
            app:layout_constraintRight_toLeftOf="@+id/availableTicketCardViewEvent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/availableTicketCardViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/availableTicketCardTextViewEvent"
            app:layout_constraintRight_toLeftOf="@+id/isActiveCardTextViewEvent" />

        <TextView
            android:id="@+id/isActiveCardTextViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/availableTicketCardViewEvent"
            app:layout_constraintRight_toLeftOf="@id/isActiveCardViewEvent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/isActiveCardViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>